<resources>
    <string name="app_name">Ups and Downs</string>
    <string name="str1Up">1 Up</string>
    <string name="str2Up">2 Up</string>
    <string name="str1Down">1 Down</string>
    <string name="str2Down">2 Down</string>
    <string name="promptTime">Time</string>
    <string name="promptDate">Date</string>
    <string name="promptTimeDate">Time and Date</string>
    <string name="separator">|</string>
    <string name="colon">:</string>
    <string name="promptDirection">Direction</string>
    <string name="promptBoats">Number of boats</string>
    <string name="promptWidebeam">Widebeam</string>
    <string name="promptExport">Select start date for export of records</string>
    <string name="deleteRecordWarning">Are you sure that want to delete record:\n</string>
    <string name="deleteRecord">Delete Record</string>
    <string name="promptImport">Import Data\n\nThis is a system utility for rare data management use only. It will import records
        from a comma separated values file located in the app files folder. The file should be formatted exactly
    as an export file generated by the app function. The file will be deleted following import.\n</string>
    <string name="importNoFileFound">Cannot find import file. Back out and copy file to correct location.\n</string>
    <string name="importFilename">UDimport.csv</string>
    <integer-array name="max_days_in_month">
        <item>31</item>
        <item>29</item>
        <item>31</item>
        <item>30</item>
        <item>31</item>
        <item>30</item>
        <item>31</item>
        <item>31</item>
        <item>30</item>
        <item>31</item>
        <item>30</item>
        <item>31</item>
    </integer-array>
</resources>
