<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gmpillatt.upsanddowns.MainActivity">

<!--RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-->
    <Button
        android:text="@string/str2Up"
        android:layout_alignTop="@+id/btn1Up"
        android:layout_toEndOf="@+id/btn1Up"
        app:layout_marginStartPercent="10%"
        app:layout_widthPercent="40%"
        app:layout_aspectRatio="100%"
        android:id="@+id/btn2Up"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@color/colorUp"
        android:onClick="onClick" />

    <Button
        android:text="@string/str1Down"
        android:layout_below="@+id/btn1Up"
        android:layout_alignStart="@+id/btn1Up"
        app:layout_widthPercent="40%"
        app:layout_aspectRatio="100%"
        android:layout_marginTop="25dp"
        android:id="@+id/btn1Down"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@color/colorDown"
        android:onClick="onClick" />

    <Button
        android:text="@string/str2Down"
        app:layout_widthPercent="40%"
        app:layout_aspectRatio="100%"
        android:layout_alignBottom="@+id/btn1Down"
        android:layout_alignStart="@+id/btn2Up"
        android:id="@+id/btn2Down"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@color/colorDown"
        android:onClick="onClick" />

    <TextView
        android:text="Today:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1Down"
        android:layout_alignStart="@+id/btn1Down"
        android:layout_marginTop="25dp"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:text="@string/str1Up"
        app:layout_marginStartPercent="5%"
        android:layout_marginTop="50dp"
        android:id="@+id/btn1Up"
        app:layout_widthPercent="40%"
        app:layout_aspectRatio="100%"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:textAllCaps="false"
        android:background="@color/colorUp"
        android:onClick="onClick" />

    <TextView
        android:text="0 Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignStart="@+id/btn2Down"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:id="@+id/textView2"
        android:textColor="@color/colorUp" />

    <TextView
        android:text="0 Down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:id="@+id/textView3"
        android:textColor="@color/colorDown" />
</android.support.percent.PercentRelativeLayout>
